--- a/index.html
+++ b/index.html
@@ -33,13 +33,15 @@
                             <thead>
                                 <tr>
                                     <th scope="col">Train Name</th>
-                                    <th scope="col"></th>
+                                    
                                     <th scope="col">Destination</th>
                                     <th scope="col">Frequency (min)</th>
                                     <th scope="col">Next Arrival</th>
                                     <th scope="col">Minutes Away</th>
                                 </tr>
                             </thead>
+                            <tbody>
+                            </tbody>
                         </table>
                     </div>
                 </div>
