--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                     </div>
                                     <div class="form-group">
                                             <label for="frequency-input">Frequency (min)</label>
-                                            <input class="form-control" id="frequency-input" placeholder="20" type="text">
+                                            <input class="form-control" id="frequency-input" placeholder="20" type="number">
                                     </div>
                                     <button class="btn btn-primary float-right" id="add-train-btn">Submit</button>
                             </form>
