more css for jumbotron

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <!-- Table for list of trains and associated information -->
     <div class="container">
         <div class="jumbotron">
+            <div class="clock"></div>
             <h1>All Aboard</h1>
             <h3>an administrative train scheduling tool</h3>
         </div>
