final styling of fonts and colors

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <div class="card-body">
                         <table class="table table-sm table-hover" id="schedule-table">
                             <thead>
-                                <tr>
+                                <tr class="tr-head">
                                     <th scope="col">Train Name</th>
                                     
                                     <th scope="col">Destination</th>
