testing on mobile devices

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <div class="jumbotron jumbotron-fluid">
                                 <div class="clock"></div>
                                 <h1>All Aboard</h1>
-                                <h3>an administrative train scheduling tool</h3>
+                                <h3>an administrative train scheduling app</h3>
                                 
                             </div>
                             <div class="row">
