--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="All Aboard: an administrative train scheduling app. Author: John Geipel.">
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"> -->
-    <script src="./assets/css/bootstrap.min.css"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" ></script> -->
+    <link rel="stylesheet" href="./assets/bootstrap-5.1.0-dist/css/bootstrap.min.css"></link>
     <script src="./assets/javascript/jquery-3.6.0.slim.min.js"></script>
-    <script src="./assets/javascript/bootstrap.min.js"></script>
+    <script src="./assets/bootstrap-5.1.0-dist/js/bootstrap.min.js"></script>
+    <!-- <script src="./assets/bootstrap-5.1.0-dist/js/bootstrap.min.js.map"></script> -->
+
+
+    <!-- <script src="./assets/javascript/bootstrap.min.js"></script> -->
+
     <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" ></script> -->
     <!-- Links for firebase.js, moment.js -->
     <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js" ></script>
