--- a/index.html
+++ b/index.html
@@ -17,9 +17,14 @@
 
     <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" ></script> -->
     <!-- Links for firebase.js, moment.js -->
-    <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js" ></script>
+
+
+    <!-- <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js" ></script> -->
+
+
+
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script> -->
-    <script src="./assets/javascript/moment.js"></script>
+    
     <!-- Links for associated css -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway:300|Roboto&display=swap" rel="stylesheet">
@@ -86,5 +91,7 @@
         <footer id="copy-year"></footer>
     </div>
 </body>
+    <script src="./assets/javascript/firebase.js"></script>
+    <script src="./assets/javascript/moment.js"></script>
     <script src="assets/javascript/app.js"></script>
 </html>
