--- a/index.html
+++ b/index.html
@@ -5,27 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="All Aboard: an administrative train scheduling app. Author: John Geipel.">
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"> -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" ></script> -->
-    <link rel="stylesheet" href="./assets/bootstrap-5.1.0-dist/css/bootstrap.min.css"></link>
+    <link rel="stylesheet" rel="preload" href="./assets/bootstrap-5.1.0-dist/css/bootstrap.min.css"></link>
     <script src="./assets/javascript/jquery-3.6.0.slim.min.js"></script>
     <script src="./assets/bootstrap-5.1.0-dist/js/bootstrap.min.js"></script>
-    <!-- <script src="./assets/bootstrap-5.1.0-dist/js/bootstrap.min.js.map"></script> -->
-
-
-    <!-- <script src="./assets/javascript/bootstrap.min.js"></script> -->
-
-    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" ></script> -->
-    <!-- Links for firebase.js, moment.js -->
-
-
-    <!-- <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js" ></script> -->
-
-
-
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script> -->
-    
-    <!-- Links for associated css -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway:300|Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -34,59 +16,63 @@
 <body>
     <div id="page-container">
         <div id="content-wrap">
-            <div class="jumbotron jumbotron-fluid">
-                <div class="clock"></div>
-                <h1>All Aboard</h1>
-                <h3>an administrative train scheduling app</h3>
-            </div>
-            <div class="row">
-                <div class="col-md-8">
-                    <div class="card mb-4">
-                        <div class="card-header">◷ Current Train Schedule</div>
-                        <div class="card-body">
-                            <table class="table table-sm table-hover" id="schedule-table">
-                                <thead>
-                                    <tr class="tr-head">
-                                        <th scope="col">Train Name</th>
-                                        <th scope="col">Destination</th>
-                                        <th scope="col">Frequency (min)</th>
-                                        <th scope="col">Next Arrival</th>
-                                        <th scope="col">Minutes Away</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                </tbody>
-                            </table>
+            <header>
+                <div class="jumbotron jumbotron-fluid">
+                    <div class="clock"></div>
+                    <h1>All Aboard</h1>
+                    <p id="header-subtitle">an administrative train scheduling app</p>
+                </div>
+            </header>
+            <main>
+                <div class="row">
+                    <div class="col-md-8">
+                        <div class="card mb-4">
+                            <div class="card-header">◷ Current Train Schedule</div>
+                            <div class="card-body">
+                                <table class="table table-sm table-hover" id="schedule-table">
+                                    <thead>
+                                        <tr class="tr-head">
+                                            <th scope="col">Train Name</th>
+                                            <th scope="col">Destination</th>
+                                            <th scope="col">Frequency (min)</th>
+                                            <th scope="col">Next Arrival</th>
+                                            <th scope="col">Minutes Away</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card mb-3">
+                            <div class="card-header"><strong>+ </strong> Add Train</div>
+                            <div class="card-body">
+                                <form>
+                                    <div class="form-group">
+                                        <label for="train-name-input">Train Name</label>
+                                        <input class="form-control" id="train-name-input" placeholder="Hogwart Express" type="text">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="destination-name-input">Destination</label>
+                                        <input class="form-control" id="destination-name-input" placeholder="Hogwart's" type="text">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="first-train-input">First Train Time (HH:mm - military time)</label>
+                                        <input class="form-control" id="first-train-input" placeholder="12:34" type="text">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="frequency-input">Frequency (min)</label>
+                                        <input class="form-control" id="frequency-input" placeholder="20" type="number">
+                                    </div>
+                                    <button class="btn btn-primary float-right" id="add-train-btn">Submit</button>
+                                </form>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="card mb-3">
-                        <div class="card-header"><strong>+ </strong> Add Train</div>
-                        <div class="card-body">
-                            <form>
-                                <div class="form-group">
-                                    <label for="train-name-input">Train Name</label>
-                                    <input class="form-control" id="train-name-input" placeholder="Hogwart Express" type="text">
-                                </div>
-                                <div class="form-group">
-                                    <label for="destination-name-input">Destination</label>
-                                    <input class="form-control" id="destination-name-input" placeholder="Hogwart's" type="text">
-                                </div>
-                                <div class="form-group">
-                                    <label for="first-train-input">First Train Time (HH:mm - military time)</label>
-                                    <input class="form-control" id="first-train-input" placeholder="12:34" type="text">
-                                </div>
-                                <div class="form-group">
-                                    <label for="frequency-input">Frequency (min)</label>
-                                    <input class="form-control" id="frequency-input" placeholder="20" type="number">
-                                </div>
-                                <button class="btn btn-primary float-right" id="add-train-btn">Submit</button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            </main>
         </div>
         <footer id="copy-year"></footer>
     </div>
