--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="./assets/javascript/jquery-3.6.0.slim.min.js"></script>
     <script src="./assets/bootstrap-5.1.0-dist/js/bootstrap.min.js"></script>
     <!-- <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet"> -->
-    <link href="https://fonts.googleapis.com/css?family=Raleway:300|Roboto&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Raleway:300|Roboto&display=swap" rel="stylesheet"> -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>Train Scheduler</title>
 </head>
