--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="Cache-control" content="public">
     <meta name="description" content="All Aboard: an administrative train scheduling app. Author: John Geipel.">
     <link rel="stylesheet" rel="preload" href="./assets/bootstrap-5.1.0-dist/css/bootstrap.min.css"></link>
     <script src="./assets/javascript/jquery-3.6.0.slim.min.js"></script>
     <script src="./assets/bootstrap-5.1.0-dist/js/bootstrap.min.js"></script>
-    <!-- <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet"> -->
-    <!-- <link href="https://fonts.googleapis.com/css?family=Raleway:300|Roboto&display=swap" rel="stylesheet"> -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>Train Scheduler</title>
 </head>
