defer bootstrap.min

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="All Aboard: an administrative train scheduling app. Author: John Geipel.">
     <link rel="stylesheet" rel="preload" href="./assets/bootstrap-5.1.0-dist/css/bootstrap.min.css"></link>
     <script src="./assets/javascript/jquery-3.6.0.slim.min.js"></script>
-    <script src="./assets/bootstrap-5.1.0-dist/js/bootstrap.min.js"></script>
+    <script src="./assets/bootstrap-5.1.0-dist/js/bootstrap.min.js" defer></script>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>Train Scheduler</title>
 </head>
